include Nikos textual changes

--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -21,18 +21,16 @@
 </header>
 
 <section id="intro">
-<p>The Core Vocabulary Mapping Directory is a repository for the Core Vocabularies and the associated Core Data Models.
+<p>The Core Vocabulary Mapping Directory hosts a collection of mappings between the Core Vocabularies and related Core Data Models. Visit the Core Vocabularies page on Joinup
+< href=" https://joinup.ec.europa.eu/asset/core_vocabularies/description">
+for more information. 
 The available data models and their connecting mappings can be explored by browsing through the Directory. 
 Also a visual expandeable Tree overview starting from the Core Vocabularies is available. The last possibility to explore 
 and reuse the information is via the SPARQL endpoint for machine readeable access.
 </p>
-<P>The <a href="https://joinup.ec.europa.eu/site/core_vocabularies/Core_Vocabularies_user_handbook/Handbook-for-using-the-Core-Vocabularies_v0.50.pdf">Core Vocabularies handbook</a> 
-  provides more insight in the usage and objectives of the Core Vocabularies. 
-  Also visit the <a href="https://joinup.ec.europa.eu/asset/core_vocabularies/asset_release/core-vocabularies-v11">Core Vocabularies homepage</a> for more background information.
-  </P>
+
   
  <h3>
-
    <a href="#creation">How to contribute</a> | <a href="#registry">Browse the directory</a> | <a href="#search">Search for mappings</a> | <a href="/sparql">SPARQL endpoint</a> | <a href="#download">Downloadables</a>
  </h3> 
 </section>
@@ -120,6 +118,7 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
   </P>
   <P>After submission the document will be iterative refined in collaboration
   </P>
+  <P>The Core Vocabularies handbook < href=" https://joinup.ec.europa.eu/site/core_vocabularies/Core_Vocabularies_user_handbook/Handbook-for-using-the-Core-Vocabularies_v0.50.pdf"> provides more insight in the objectives and the use of the Core Vocabularies. </P>
   
 </section>
 
