add contact email address

--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -115,7 +115,7 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
         <li>download the mapping template document <a href="Core_Vocabularies_Mapping_Template.xlsx">Core_Vocabularies_Mapping_Template.xlsx</a>. </li>
         <li>insert in the "Target Vocabularies" sheet the description of the target Core Data Model.</li>
         <li>insert in the "Mappings" sheet the mapping between the Core Vocabularies and the target Core Data Model</li>
-        <li>submit the document to XXX</li>
+        <li>submit the document to contact@semic.eu</li>
       </ol>
   </P>
   <P>After submission the document will be iterative refined in collaboration
