--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -76,7 +76,7 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
     <li>
 			DCAT-AP <a href="http://data.opendatasupport.eu">Open Data Support</a> Mappings:
 			<ul>
-				<li><a href="/vdm/id/dcat/">Browsable View</a>,</li>
+				<li><a href="/vdm/id/cv/34884a917711536741cf1da45b7f6b41">Browsable View</a>,</li>
 				<li>
 					<a href="visualisation/tree.html">Tree Visualisation 
 						of the DCAT-AP configuration mappings in Open Data Support</a>
@@ -112,7 +112,7 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
   </P>
   <P>This consists of four steps
       <ol>
-        <li>download the mapping template document <a href="Core_Vocabularies_Mapping_Template.xlsx">Core_Vocabularies_Mapping_Template.xlsx</a>. </li>
+        <li>download the mapping template document <a href="public_data/Core_Vocabularies_Mapping_Template.xlsx">Core_Vocabularies_Mapping_Template.xlsx</a>. </li>
         <li>insert in the "Target Vocabularies" sheet the description of the target Core Data Model.</li>
         <li>insert in the "Mappings" sheet the mapping between the Core Vocabularies and the target Core Data Model</li>
         <li>submit the document to contact@semic.eu</li>
@@ -127,10 +127,13 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
 <section  id="download">
 	<h2>Downloadables</h2>
 	<ul>
-    <li>The mapping template document <a href="Core_Vocabularies_Mapping_Template.xlsx">Core_Vocabularies_Mapping_Template.xlsx</a>. </li>
-		<li><a href="Core_Vocabularies_v1.3.xlsx">Core Vocabularies Mapping Table</a></li>
-		<li><a href="DCatVocabularies-v0.1.xlsx">DCat Vocabularies Mapping Table</a></li>
-		<li><a href="EuroVocmappings_v0.03-1.xlsx">EuroVoc Value Mapping Table</a></li>
+    <li>The mapping template document <a href="public_data/Core_Vocabularies_Mapping_Template.xlsx">Core_Vocabularies_Mapping_Template.xlsx</a>. </li>
+		<li><a href="public_data/Core_Vocabularies_v1.3.xlsx">Core Vocabularies Mapping Table</a></li>
+		<li><a href="public_data/DCatVocabularies-v0.2.xlsx">DCat Vocabularies Mapping Table</a></li>
+		<li><a href="public_data/EuroVocmappings_v0.03-1.xlsx">EuroVoc Value Mapping Table</a></li>
+		<li><a href="public_data/skos.rdf">SKOS RDF definitions</a></li>
+		<li><a href="public_data/dcterms.rdf">Dublic Core RDF definitions</a></li>
+		<li><a href="public_data/vdm.ttl">VDM TTL definitions</a></li>
 
 </ul>
 </section>
@@ -167,16 +170,15 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
 </footer>
 
 <script type="text/javascript" src="js/main.js"></script>
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', '%GOOGLE_ANALYTICS%']);
-  _gaq.push(['_trackPageview']);
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  (function() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+  ga('create', 'UA-61212072-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 </body>
 </html>
