fix initial image.

--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -14,7 +14,7 @@
 <header>
   <div class="logo">
     <a href="https://www.semic.eu">
-      <img src="images/semic_logo.png" alt="SEMIC logo" width="90" height="90" />
+      <img src="/vdm/images/semic_logo.png" alt="SEMIC logo" width="90" height="90" />
     </a>
   </div>
   <h1><a href="/vdm/" color="white">Core Data Model Mapping Directory</a></h1>
