Added concept labels for those concepts which can be generated after the query is name (narrow and broadMatch properties in this case).

--- a/system/www/description.vsp.in
+++ b/system/www/description.vsp.in
@@ -65,6 +65,8 @@ query := 'CONSTRUCT {
   ?c rdfs:label ?clabel .
   ?s vdm:has_datamodel ?d .
 	?d rdfs:label ?dlabel .
+  <http://www.w3.org/2004/02/skos/core#narrowMatch> rdfs:label "has narrow match" .
+  <http://www.w3.org/2004/02/skos/core#broadMatch> rdfs:label "has broad match" .
 } WHERE {
   {
     <URI> ?p ?o
