--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -132,12 +132,19 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
 	<ul>
     <li>The mapping template document <a href="public_data/Core_Vocabularies_Mapping_Template.xlsx">Core_Vocabularies_Mapping_Template.xlsx</a>. </li>
 		<li><a href="public_data/Core_Vocabularies_v1.3.xlsx">Core Vocabularies Mapping Table</a></li>
-		<li><a href="public_data/DCatVocabularies-v0.2.xlsx">DCat Vocabularies Mapping Table</a></li>
-		<li><a href="public_data/EuroVocmappings_v0.03-1.xlsx">EuroVoc Value Mapping Table</a></li>
+		<li><a href="public_data/DCatVocabularies-v0.2.xlsx">DCAT-AP Vocabularies Mapping Table</a></li>
+		<li><a href="public_data/EuroVocmappings_v0.03-1.xlsx">EuroVoc to DCAT-AP theme mapping table</a></li>
+	</ul>
+
+	<h2>Machine Readable Data</h2>
+
+	<ul>
+		<li><a href="">mappingfrom Excel input to RDF</a></li>
 		<li><a href="public_data/skos.rdf">SKOS RDF definitions</a></li>
 		<li><a href="public_data/dcterms.rdf">Dublic Core RDF definitions</a></li>
 		<li><a href="public_data/vdm.ttl">VDM TTL definitions</a></li>
-
+		<li><a href="public_data/adms_v1.02.rdf">ADMS RDF definitions</a></li>
+		<li><a href="/sparql">Sparql End-point</a></li>
 </ul>
 </section>
 
