Added in DCAT-AP/SDMX mappings file. Also started to move all config checks into the configure.ac (autoconf translated file). The Makefile.in is the main file to build the system.

--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -92,6 +92,10 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
 				-->
 			</ul>
 		</li>
+		<li>
+			SDMX - DCAT-AP Mappings:
+			<ul>
+				<li><a href="/vdm/id/cv/0a7380a6c87798dc2d0db45ef1814630">Browsable View</a></li>
   </ul>
 </section>
   <section id="search">
