--- a/configure.ac
+++ b/configure.ac
@@ -8,5 +8,8 @@ AC_CHECK_PROG(TAR, [tar],[/bin/tar])
 AC_CHECK_PROG(SORT, [sort],[/usr/bin/sort])
 AC_CHECK_PROG(AWK, [awk],[/usr/bin/awk])
 AC_CHECK_PROG(TR, [tr],[/usr/bin/tr])
-AC_CONFIG_FILES([Makefile])
+AC_CHECK_PROG(ROQET, [roqet],[/usr/bin/roqet])
+AC_CHECK_PROG(EMACS, [emacs],[/usr/bin/emacs])
+AC_CHECK_PROG(XSLTPROC, [xsltproc],[/usr/bin/xsltproc])
+AC_CONFIG_FILES([Makefile tests/Makefile])
 AC_OUTPUT
